glFusion ChangeLog

v1.3.0
------
- Replaced {xhtml} tags with " /" as HTML5 validates by ignoring auto-closing
  tags (ex: <br />) (Eric)
- Removed unused templates in private/plugins/filemgmt/templates/ (Eric)
- Removed public_html/layout/nouveau/comment/commentform_advanced.thtml
  (no longer needed per Mark) (Eric)
- General BB2 code cleanup, upgrade to core 2.0.48 (Mark)
- Fixed hard-coded admin url reference (Eric)
- Improved comment entry / viewing (Mark)
- Removed 'View Members' option from group editor (Mark)
- User admin / profile editor - reworked the password form fields to
  be more user friendly for password managers (Mark)
- PLG_createUser() was called too early in the creation process (Mark)
- Forum: Implemented Stop Forum Spam for anonymous posts (Mark)
- New update checker (Mark)
- Implemented full support for StopForumSpam in Spam-X (Mark)
- Error check to ensure Media Gallery plugin is enabled before calling
  init routines (Mark)
- Open Graph Support (Mark)
- meta description support for articles (Mark)
- Added example phpblock functions to lib-custom (Eric)
- Fixed pwd strength meter on My Account/Username & Password panel (Mark H.)
- Implemented Facebook account merge (Mark)
- Fixed issue with auto tags not expanded in the BB code library (Mark)
- Updated Bad Behavior to v2.0.45 (Mark)
- Fixed Static Page label field was not being saved (Mark)
- Fixed bug in new date class - Unix timestamp coversion did not use proper
  timezone (Mark)
- Media Gallery: When viewing an image by following the What's New comment
  link, CSS was displayed at the top of the image (Mark)
- Fixed quotes handling in Group and Block admin description fields (Mark H.)
- Media Gallery: Fixed paging error when paging through albums (Mark)
- Forum Plugin: Default topics / posts per page were not properly set
  for new users (Mark)
- Fixed grp_id not passed in pagination links User Admin when group selection
  filter is applied.  (Mark H.)